[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "temporal-mapper"
authors = [
    {name = "Kaleb D Ruscitti", email="kaleb.ruscitti@uwaterloo.ca"},
]
version = "1.0.0"
readme = "README.md"
license = {text = "BSD-3-Clause license"}
keywords = ["Mapper", "TDA", "Morse Theory", "Temporal Topic Modeling"]
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "tqdm",
    "scikit-learn",
    "scipy",
    "networkx",
    "numba",
]
[project.optional-dependencies]
visualizations = [
    "datamapplot",
    "datashader",
    "vectorizers",
]
